1) Переменные финал сделал заглавными буквами. 2) Добавил List.of. 3) Откорректировал метод findPairs.